# VEIL

./: .env  .env.example  .gitignore  .prettierignore  LICENSE  README.md  TODO.md  bun.lockb  diesel.toml  index.html  package.json  tailwind.config.ts  tsconfig.json  unimport.d.ts  vite.config.ts  widget.html
.github/workflows/: build-manual.yml  publish-to-manual-release.yml
arch/: PKGBUILD
public/: widget.html
src/: App.vue  Widget.vue  bindings.ts  main.ts  styles.css  widget.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/app/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/app/capabilities/: default.json
src-tauri/crates/app/icons/: icon.icns
src-tauri/crates/app/src/: config.rs  discord.rs  error.rs  event_bus.rs  events.rs  main.rs  queue.rs  state.rs
src-tauri/crates/app/src/app/: builder.rs  mod.rs  state.rs
src-tauri/crates/app/src/commands/: db.rs  lastfm.rs  mod.rs  music_folder.rs  player.rs  plugins.rs  sqlite.rs
src-tauri/crates/app/src/services/: lastfm.rs  mod.rs  player.rs  utils.rs
src-tauri/crates/app/src/systems/: lastfm.rs  mod.rs  player.rs  ui.rs  utils.rs
src-tauri/crates/app/src/ui/: app.rs  assets.rs  default-theme.json  icon.rs  image_cache.rs  mod.rs  theme.rs
src-tauri/crates/app/src/ui/components/: album_card.rs  button.rs  mod.rs  modal.rs  sidebar.rs  slider.rs  switch.rs  toggle.rs  uniform_grid.rs
src-tauri/crates/app/src/ui/views/: all_albums.rs  home.rs  mod.rs  modal_layer.rs  player.rs
src-tauri/crates/common/: Cargo.toml
src-tauri/crates/common/src/: lib.rs  rusqlite_impl.rs  traits.rs
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/queries/: schema.sql
src-tauri/crates/db/queries/albums/: album_artists_insert.sql  albums_all.sql  albums_artist_id.sql  albums_latest.sql  albums_offset.sql
src-tauri/crates/db/queries/artists/: artist_album.sql  artists_insert.sql  artists_latest.sql
src-tauri/crates/db/queries/playlists/: playlists_id.sql  playlists_insert.sql  playlists_latest.sql  playlists_tracks.sql  playlists_tracks_total.sql  playlists_update.sql
src-tauri/crates/db/queries/tracks/: tracks_insert.sql  tracks_offset.sql  tracks_playlist_offset.sql
src-tauri/crates/db/src/: lib.rs  timed_connection.rs
src-tauri/crates/lastfm/: Cargo.toml
src-tauri/crates/lastfm/src/: lib.rs  models.rs
src-tauri/crates/lastfm/src/api/: album.rs  auth.rs  mod.rs  track.rs  user.rs
src-tauri/crates/logging/: Cargo.toml
src-tauri/crates/logging/src/: lib.rs
src-tauri/crates/media_controls/: Cargo.toml
src-tauri/crates/media_controls/src/: lib.rs  seams.rs
src-tauri/crates/metadata_audio/: Cargo.toml
src-tauri/crates/metadata_audio/benches/: metadata_bench.rs
src-tauri/crates/metadata_audio/src/: flac.rs  id3.rs  lib.rs  traits.rs
src-tauri/crates/src/: bindings.ts
src-tauri/db/: Cargo.toml
src-tauri/db/queries/: albums_all.sql  albums_insert.sql  albums_update_type.sql  playlists_insert.sql  playlists_insert_track.sql  playlists_update.sql  schema.sql  tracks_update_duration.sql
src-tauri/db/queries/albums/: album_name.sql  albums_duration.sql  albums_id.sql  albums_insert.sql
src-tauri/db/queries/artists/: artists_id.sql  artists_insert.sql
src-tauri/db/queries/playlists/: playlists_delete_track.sql
src-tauri/db/queries/search/: search_find.sql  search_insert.sql
src-tauri/db/queries/tracks/: tracks_id.sql  tracks_insert.sql  tracks_latest.sql
src-tauri/db/src/: lib.rs  models.rs
src-tauri/lastfm/: Cargo.toml
src-tauri/lastfm/src/: lib.rs  models.rs  traits.rs
src-tauri/lastfm/src/api/: auth.rs  track.rs  user.rs
src-tauri/metadata_audio/: Cargo.toml
src-tauri/metadata_audio/src/: flac.rs  lib.rs
src-tauri/src/: config.rs  db.rs  discord.rs  error.rs  lib.rs  main.rs  models.rs  player.rs  setup.rs
src-tauri/src/commands/: config.rs  convert_file.rs  discord.rs  lastfm.rs  metadata.rs  mod.rs  music_folder.rs  player.rs  sqlite.rs
src-tauri/src/interface/: album.rs  artist.rs  mod.rs  playlist.rs  track.rs
src-tauri/src/metadata/: error.rs  flac.rs  id3.rs  lib.rs
src/components/: BigCard.vue  Button.vue  ContextMenu.vue  Dialog.vue  DialogGuide.vue  DialogSearch.vue  Dropdown.vue  Greet.vue  IconButton.vue  InputBar.vue  Modal.vue  Player.vue  PlayerControls.vue  PlaylistCard.vue  PlaylistEdit.vue  RadioButton.vue  SearchBar.vue  SideBar.vue  TitleBar.vue  Toast.vue  ToastManager.vue  TrackList.vue  VirtualList.vue  VolumeControls.vue  index.ts
src/components/NativeElements/: RadioButton.vue  RangeInput.vue  index.ts
src/components/RekaUI/: ContextMenu.vue  Pagination.vue  RadioGroup.vue  Slider.vue  Switch.vue  index.ts
src/composables/: configStore.ts  index.ts  playerStore.ts  playlistStore.ts  queueStore.ts  store.ts  toastBus.ts  utils.ts
src/pages/: Album.vue  Albums.vue  AllAlbums.vue  Artist.vue  CollectionView.vue  ColorTesting.vue  Home.vue  Playlist.vue  Settings.vue  VirtualAlbums.vue  Widget.vue  index.ts
