[package]
name = "sodapop_reimagined"
version = "0.0.0"
description = "A modern-looking local music player written in Vue + Tauri"
authors = ["crackheadakira"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
discord-rich-presence = "0.2.5"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.3.0"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-fs = "2.4.0"

common = { path = "./crates/common", features = ["serialization"] }
db = { path = "./crates/db" }
lastfm = { path = "./crates/lastfm" }
media_controls = { path = "./crates/media_controls", features = [
    "serialization",
] }
metadata_audio = { path = "./crates/metadata_audio" }
logging = { path = "./crates/logging" }

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6.2"

[profile.dev]
incremental = true

[workspace]
members = [
    "crates/common",
    "crates/db",
    "crates/lastfm",
    "crates/logging",
    "crates/media_controls",
    "crates/metadata_audio",
]

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed. HAS TO BE FALSE DUE TO #8929
