[profile.dev]
incremental = true

[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/common",
    "crates/db",
    "crates/lastfm",
    "crates/logging",
    "crates/media_controls",
    "crates/metadata_audio",
]

default-members = ["crates/app"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
common = { path = "crates/common" }
db = { path = "crates/db" }
lastfm = { path = "crates/lastfm" }
logging = { path = "crates/logging" }
media_controls = { path = "crates/media_controls" }
metadata_audio = { path = "crates/metadata_audio" }

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed. HAS TO BE FALSE DUE TO #8929
