[profile.dev]
incremental = true

[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/common",
    "crates/db",
    "crates/lastfm",
    "crates/logging",
    "crates/media_controls",
    "crates/metadata_audio",
]

default-members = ["crates/app"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
common = { path = "crates/common" }
db = { path = "crates/db" }
lastfm = { path = "crates/lastfm" }
logging = { path = "crates/logging" }
media_controls = { path = "crates/media_controls" }
metadata_audio = { path = "crates/metadata_audio" }
thiserror = "^2.0.12"
anyhow = "^1.0.100"

[workspace.lints.clippy]
all = { level = "warn", priority = 0 }
suspicious = { level = "warn", priority = 1 }
perf = { level = "warn", priority = 2 }
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
match_like_matches_macro = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
str_to_string = "warn"

[workspace.lints.rust]
nonstandard_style = { level = "warn", priority = 0 }
unsafe_code = { level = "deny", priority = 1 }
future_incompatible = { level = "warn", priority = 2 }
unexpected_cfgs = { level = "warn", priority = 3 }

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed. HAS TO BE FALSE DUE TO #8929

[profile.release-debug]
inherits = "release"
strip = false
debug = true
