[package]
name = "sodapop_reimagined"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
discord-rich-presence = "1.0.0"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }
thiserror = "2.0.11"
tokio = { version = "1.49.0", features = ["full"] }
webbrowser = { version = "1.0.6", features = ["hardened", "disable-wsl"] }
rfd = { version = "0.17.2", default-features = false, features = ["gtk3"] }

common = { workspace = true, features = ["serialization"] }
db.workspace = true
lastfm.workspace = true
media_controls = { workspace = true, features = ["serialization"] }
metadata_audio.workspace = true
logging.workspace = true
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6.2"
