[package]
name = "db"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
once_cell = "1.21.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.30.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
thiserror = "2.0.12"
include_dir = "0.7.4"
common = { workspace = true, features = ["rusqlite"] }
logging.workspace = true
