[package]
name = "db"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
once_cell = "1.21.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
thiserror = { workspace = true }
include_dir = "0.7.4"
common = { workspace = true, features = ["rusqlite"] }
logging.workspace = true

[features]
bench = []
