[package]
name = "lastfm"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
md5 = "0.8.0"
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
thiserror = { workspace = true }
once_cell = "1.21.3"
