[package]
name = "media_controls"
version = "0.0.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
kira = "0.10.8"
souvlaki = { version = "0.8.3", default-features = false, features = [
    "use_zbus",
] }
common.workspace = true
logging.workspace = true

serde = { version = "1.0.219", features = ["derive"], optional = true }
specta = { version = "2.0.0-rc.21", optional = true }

[features]
default = []
serialization = ["dep:serde", "dep:specta"]
